css/style.css
/* ... */
.easy-button-button span.fa{
    line-height: 1.7;
    font-size: 20px;
}
.easy-button-button img {
    width: 100%;
    height: 100%;
}
.favoriteMarker {
    height: 18px !important;
    width: 18px !important;
    -webkit-mask: url('images/star-circle.svg') no-repeat 50% 50%;
    -webkit-mask-size: 18px;
    mask: url('images/star-circle.svg') no-repeat 50% 50%;
    mask-size: 18px;
    background: url('images/star-white.svg') no-repeat 50% 50%;
    background-size: 18px 18px;
}
.favoriteClusterMarker {
    height: 27px !important;
    width: 27px !important;
    -webkit-mask: url('images/star-circle.svg') no-repeat 50% 50%;
    -webkit-mask-size: 27px;
    mask: url('images/star-circle.svg') no-repeat 50% 50%;
    mask-size: 27px;
    background: url('images/star-white.svg') no-repeat 50% 50%;
    background-size: 27px 27px;
}
.leaflet-marker-favorite {
    height: 18px !important;
    width: 18px !important;
}
.leaflet-marker-favorite-cluster,
.leaflet-marker-favorite {
    box-shadow: 0px 0px 10px #888;
    border-radius: 50%;
}
.trackWaypoint,
.route-waypoint {
    height: 25px !important;
    width: 25px !important;
    -webkit-mask: url('images/marker-icon.svg') no-repeat 50% 50%;
    -webkit-mask-size: 25px;
    mask: url('images/marker-icon.svg') no-repeat 50% 50%;
    mask-size: 25px;
    background: url('images/marker-icon-bg.svg') no-repeat 50% 50%;
    background-size: 25px 25px;
}
.route-begin-waypoint {
    background-color: green;
}
.route-middle-waypoint {
    background-color: blue;
}
.route-end-waypoint {
    background-color: red;
}
.leaflet-contextmenu-item {
    line-height: 30px !important;
    color: var(--color-text-lighter) !important;
}
.leaflet-contextmenu-item:hover {
    color: var(--color-main-text) !important;
}
.leaflet-contextmenu-item img {
    margin: 7px 8px 0 0 !important;
}
.line-enabled {
    background: var(--color-background-dark);
}
.line-disabled {
    background: var(--color-main-background);
}
.popupMarker::after {
    border: 0;
}
.popupMarker form {
    margin-top: 0 !important;
}
.popupMarker button {
    height: 38px !important;
}
.popupMarker {
    width: 200px;
}
#navigation-routing:not(.icon-loading-small) > a::before {
    content: "\f4d7";
    font-family: 'Font Awesome\ 5 Free';
    font-style: normal;
    font-weight: 900;
    text-decoration: inherit;
    position: absolute;
    left: 16px;
}
#navigation-tracks:not(.icon-loading-small) > a::before {
    content: "\f018";
    font-family: 'Font Awesome\ 5 Free';
    font-style: normal;
    font-weight: 900;
    text-decoration: inherit;
    position: absolute;
    left: 16px;
}
#navigation-favorites:not(.active) > * ,
#navigation-routing:not(.active) > * ,
#navigation-photos:not(.active) > * ,
#navigation-contacts:not(.active) > * ,
#navigation-tracks:not(.active) > * ,
#navigation-devices:not(.active) > * {
    opacity: 0.57 !important;
}
.ui-autocomplete {
    z-index: 10000 !important;
}
.tooltip-photo-date,
.tooltip-photo-name {
    width: 100%;
    text-align: center;
}
.tooltip-photo-name {
    color: var(--color-text-light);
}
.tooltip-photo-date {
    font-weight: bold;
}

.tooltip-contact-avatar {
    max-width: 100px;
    max-height: 100px;
    width: auto;
    height: auto;
}

.tooltip-contact-name {
    width: 100%;
    text-align: center;
}
/* Overriden routing/geocoder style */
.leaflet-routing-geocoder-result tr {
    line-height: 35px;
}
/* hide button if placeholder is shown i.e. if field is empty */
.leaflet-routing-geocoder > input:placeholder-shown + span {
    display: none;
}
.leaflet-routing-geocoders {
    border-bottom: 0;
}
.leaflet-routing-alternatives-container:not(:empty) {
    border-top: 1px solid var(--color-border);
}
.leaflet-routing-reverse-waypoints.icon-loading-small::after {
    content: '';
}
.leaflet-routing-reverse-waypoints,
.leaflet-routing-add-waypoint {
    width: 25px !important;
    height: 25px !important;
    min-width: 25px !important;
    min-height: 25px !important;
    padding: 0px !important;
    border: 1px solid var(--color-border) !important;
    line-height: 0px !important;
}
.leaflet-routing-remove-waypoint::after {
    right: 6px !important;
    width: 18px !important;
    height: 5px !important;
    background-color: var(--color-main-background) !important;
}
.leaflet-routing-remove-waypoint:hover:after {
    color: var(--color-main-text) !important;
}
.leaflet-routing-alt table {
    white-space: normal;
    width: 100%;
}
.leaflet-routing-alt td:nth-child(2),
.leaflet-routing-alt td:nth-child(3) {
    display: block;
}
.leaflet-routing-alt td:nth-child(3) {
    color: var(--color-text-light);
}
.leaflet-routing-alt tr:nth-child(odd) {
    background-color: var(--color-background-dark);
}
.leaflet-routing-alt tr:hover {
    background-color: var(--color-background-darker);
}
.leaflet-routing-instruction-distance {
    width: 1px;
}
.app-navigation-entry-menu {
    z-index: 10001;
}
#devicecolorinput,
#trackcolorinput {
    opacity: 0;
    width: 0px;
    height: 0px;
    min-height: 0px;
    padding: 0px;
    margin: 0px;
    border: 0px;
}
.popuptable{
    font-size: 10px;
    border-collapse: collapse;
    word-wrap: break-word;
    white-space: normal;
    width: 220px;
    margin: auto;
}
.popuptable td{
    border: 1px solid var(--color-border);
    padding: 0px 5px 0px 5px;
    color: var(--color-main-text)
}
.popuptable tr:nth-child(even) {
    background-color: var(--color-main-background);
}
.popuptable tr:nth-child(odd) {
    background-color: var(--color-background-dark);
}
.popuptable tr:hover {
    background-color: var(--color-background-darker);
}
.trackNamesList {
    word-wrap: break-word;
    white-space: normal;
}
.searchCompleteIcon {
    background-color: inherit;
    border: 0px;
    height: 35px;
    padding-top: 15px;
}
.searchCompleteLink {
    line-height: 35px;
}
.search-add-favorite {
    margin-left: auto;
    margin-right: auto;
    display: block;
}
/* ... */

